USAGOV-1132-Realign-Footer-Button: CEO side effect, fixed.
Added a container for the button to make it easier to position it.

--- a/web/themes/custom/usagov/sass/_uswds-theme-custom-styles.scss
+++ b/web/themes/custom/usagov/sass/_uswds-theme-custom-styles.scss
@@ -752,6 +752,17 @@ input:not([disabled]):focus.usa-user-error {
 }
 */
 
+.ceo-button-container {
+  display: flex;
+  // Manages where the button is going to be positioned.
+  // Example: center, right, left.
+  justify-content: center;
+}
+
+.ceo-button {
+  margin-inline: 0 !important;
+}
+
 .usa-error--alert {
   display: none;
 }
@@ -994,13 +1005,6 @@ div[class^="QSIUserDefinedHTML"] {
 
 p, a, .usa-label, .usa-radio__label {
   line-height: 1.5;
-}
-
-.usa-form .usa-button {
-  margin-left: 4rem;
-  @media (max-width: 30em) {
-    margin-left: .4rem;
-  }
 }
 
 .usa-form div.maxw-mobile p {
